src/objects/Campaign__c.object
<CustomObject>
    <description>Campaign records for all Marketing Plans.</description>
    <fields>
        <fullName>Activation_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used for National Marketing to identify Activation Campaigns.</inlineHelpText>
        <label>Activation Campaign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActualCampaignSpend__c</fullName>
        <description>Sum of Actual spend sent from SAP.</description>
        <inlineHelpText>Sum of Actual Spend sent from SAP.</inlineHelpText>
        <label>Actual Campaign Spend</label>
        <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Campaign_Spend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Brand_Quality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand Quality</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Tags__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Brand Quality</value>
            </filterItems>
            <filterItems>
                <field>Tags__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand inherited from parent Marketing Plan.</description>
        <formula>ParentMarketingPlan__r.Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignBalance__c</fullName>
        <description>Campaign Budget - (Actual Campaign Spend + Committed Campaign Spend)</description>
        <formula>PlannedCampaignSpend__c  - ( ActualCampaignSpend__c  +  CommittedCampaignSpend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campaign Budget - (Actual Campaign Spend + Committed Campaign Spend).</inlineHelpText>
        <label>Campaign Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CampaignBrand__c</fullName>
        <label>Campaign Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Ardmore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auchentoshan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basil Hayden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowmore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calico Jack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cien Anos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cien Anos RTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courvoisier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruzan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeKuyper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Tesoro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glen Garioch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hacienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hornitos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Whiskeys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Devils Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Flavors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Ghost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Beam Red Stag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kessler Blend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knob Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laphroaig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Larios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makers Mark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CampaignStatus__c</fullName>
        <description>Field used to view the current status of the Campaign.</description>
        <inlineHelpText>Field used to view the current status of the Campaign.</inlineHelpText>
        <label>Campaign Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CampaignType__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National POS (Finance Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Balance_Budget_Actuals__c</fullName>
        <formula>PlannedCampaignSpend__c - ( ActualCampaignSpend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Balance (Budget  - Actuals)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Used to capture Budget comments anytime Budget is modified.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommittedCampaignSpend__c</fullName>
        <description>Sum of Committed Spend sent from SAP.</description>
        <inlineHelpText>Sum of Committed Spend sent from SAP.</inlineHelpText>
        <label>Committed Campaign Spend</label>
        <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Campaign_Spend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Committed</value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_Actual_Spend__c</fullName>
        <formula>ActualCampaignSpend__c +  CommittedCampaignSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed + Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>text( ParentMarketingPlan__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of Campaign.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DistributorQuotaDetails__c</fullName>
        <description>The Distributor Quota Details as it&apos;s found on the mirrored program.</description>
        <formula>Mirrored_Program__r.DistributorQuotaDetails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Distributor Quota Details as it&apos;s found on the mirrored program in which the state managers are managing this field</inlineHelpText>
        <label>Distributor Quota Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.ProgramPartner__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Distributor)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>text ( ParentMarketingPlan__r.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ForecastedCampaignSpend__c</fullName>
        <description>Sum of Forecasted Amount.</description>
        <inlineHelpText>Sum of Forecasted Amount.</inlineHelpText>
        <label>Forecasted Campaign Budget</label>
        <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Campaign_Spend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GLAccountType__c</fullName>
        <label>GL Account Type</label>
        <picklist>
            <controllingField>CampaignType__c</controllingField>
            <picklistValues>
                <fullName>Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLCode__c</fullName>
        <label>GL Code</label>
        <picklist>
            <controllingField>GLDescription__c</controllingField>
            <picklistValues>
                <fullName>15010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15080</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15170</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15420</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15440</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15470</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15490</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15510</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15820</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15850</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GLDescription__c</fullName>
        <label>GL Description</label>
        <picklist>
            <controllingField>GLAccountType__c</controllingField>
            <picklistValues>
                <fullName>Ad Production Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced TV Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinema Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Giveaways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Magazines Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Newspaper Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Agency Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Relations Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Display Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight and Storage (National POS Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heritage Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liscensing and Royalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Agency Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard Digital Units Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Consumer Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Display Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise - Trade Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Value Added Packaging (VAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Trade Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Video Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise Consumer Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise Menus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise - Trade Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IOCode__c</fullName>
        <label>IO Code</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InitialEndDate__c</fullName>
        <description>Initial end date of the Campaign.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InitialStartDate__c</fullName>
        <description>Initial start date of the Campaign.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Budget_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Budget Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mirrored_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to tie the brand investment campaign to the mirrored program that is created via code.  This field will be used in order to keep the brand investment campaign and the program in sync.</description>
        <label>Mirrored Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaigns (Mirrored Program)</relationshipLabel>
        <relationshipName>MirroredCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NationalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ActivelyManaged__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (National Account)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective (JTBDI)</label>
        <picklist>
            <controllingField>Strategy__c</controllingField>
            <picklistValues>
                <fullName>Bartender training and education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG GINGER On-Premise Menus/Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG GINGER sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build 10YO distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build big, impactful displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Wine and Vodka on-premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close distribution gaps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close distribution gaps to Smirnoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close distribution gaps with Bacardi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-display with Casa Sauza family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect JT in-store and on-premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross merchandising at retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devil’s Cut and Flavors on-premise activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Displays via secondary placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution of JDK &amp; Sons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive display and increase velocity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive distribution in focus channels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive distribution of KC variants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive distribution on Devil’s Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive hitchhikers in the marketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Maker’s 46 distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive menu &amp; back bar placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive on-premise distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive on-premise distribution (JBW, DC, Flavors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Sauza Blue distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive shot machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive trial of new products and categories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive trial on flavors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage bartenders</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParentMarketingPlan__c</fullName>
        <label>Master Marketing Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>MarketingPlan__c.MP_Type__c</field>
                <operation>equals</operation>
                <value>TERRITORY - FIELD</value>
            </filterItems>
            <filterItems>
                <field>MarketingPlan__c.MP_Type__c</field>
                <operation>equals</operation>
                <value>TERRITORY - NATL MKTG</value>
            </filterItems>
            <filterItems>
                <field>MarketingPlan__c.MP_Type__c</field>
                <operation>equals</operation>
                <value>TERRITORY - NATL ACCTS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ParticipatingStates__c</fullName>
        <inlineHelpText>This field is for the National Accounts team only to flag which States their Campaigns cover.</inlineHelpText>
        <label>Participating States (National Accounts)</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Mexico</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PlannedCampaignSpend_USD_Formula__c</fullName>
        <formula>IF(ISNULL(PlannedCampaignSpend_USD_Hidden__c), NULL, ROUND(PlannedCampaignSpend_USD_Hidden__c,2))</formula>
        <label>Campaign Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedCampaignSpend_USD_Hidden__c</fullName>
        <label>Campaign Budget USD (Hidden)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlannedCampaignSpend__c</fullName>
        <label>Campaign Budget</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramDescription__c</fullName>
        <description>The description that was entered and maintained on the mirrored program.</description>
        <formula>Mirrored_Program__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The description that was entered and maintained on the mirrored program by the State Manager.</inlineHelpText>
        <label>Program Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RebateCode__c</fullName>
        <label>Rebate Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>